# tunabrain

./: .gitignore  AGENTS.md  PLAN.md  PR_DESCRIPTION.md  QUICKSTART_TESTING.md  README  README.md  TESTING.md  flake.nix  pyproject.toml  test_scheduling_manual.py
archive/: PLAN.md  PR_DESCRIPTION.md  QUICKSTART_TESTING.md  TESTING.md
docs/: handoff-tunarr-pseudovision.md  scheduling-grid-spec.md
src/tunabrain/: __init__.py  __main__.py  app.py  config.py  llm.py  logging.py  version.py
src/tunabrain/agents/: __init__.py  scheduling_agent.py  scheduling_state.py  scheduling_tools.py
src/tunabrain/api/: __init__.py  models.py  routes.py
src/tunabrain/chains/: bumpers.py  categorization.py  channel_mapping.py  context.py  describe.py  directory_enrichment.py  enrich_long.py  enrich_short.py  episode_flagging.py  scheduling.py  tag_governance.py  tagging.py  validation.py
src/tunabrain/keyframes/: __init__.py  caption.py
src/tunabrain/scheduling/: cost.py  expander.py  grid.py  monthly_overrides.py  monthly_strategy.py  quarterly_grid.py  quarterly_strategy.py  review.py
src/tunabrain/stt/: __init__.py  audio.py  client.py  keyframes.py
src/tunabrain/tools/: __init__.py  (+2 more)
tests/: conftest.py  test_agent_basic.py  test_categorization.py  test_channel_mapping.py  test_describe.py  test_directory_enrichment.py  test_enrich_long_form.py  test_enrich_short_form.py  test_grid_contracts.py  test_grid_expander.py  test_health.py  test_integration.py  test_media_context.py  test_monthly_overrides_unit.py  test_monthly_strategy_unit.py  test_quarterly_grid_unit.py  test_quarterly_strategy_unit.py  test_review_unit.py  test_scheduling_tools.py  test_tag_governance.py  test_titles.py  test_value_validation.py  test_wikipedia_relevance.py
