[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tunabrain"
version = "0.1.0"
description = "LangChain-powered service providing LLM workflows for Tunarr Scheduler"
authors = [{ name = "Tunarr", email = "dev@tunarr" }]
readme = "README"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "langchain>=0.2",
  "langchain-core>=0.2",
  "langchain-openai>=0.2",
  "langchain-ollama>=0.2",
  "langgraph>=0.2.56",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=8.2",
  "httpx>=0.27",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
extend-select = ["I"]

