[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tunabrain"
version = "0.1.0"
description = "LangChain-powered service providing LLM workflows for Tunarr Scheduler"
authors = [{ name = "Tunarr", email = "dev@tunarr" }]
readme = "README"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "langchain>=1.0",
  "langchain-core>=1.0",
  "langchain-openai>=1.0",
  "langchain-ollama>=1.0",
  "langgraph>=1.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-anyio>=0.0.0",
  "anyio>=4.0",
  "httpx>=0.27",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
extend-select = ["I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

